clarificaitons and fixes

--- a/react-jsx/5.4.md
+++ b/react-jsx/5.4.md
@@ -32,3 +32,7 @@ Once this code is parsed by a JavaScript engine (i.e., a browser) the JavaScript
 ```
 
 Nothing that complicated is going on here once you realize that the brackets basically escape the JSX. The `{ }` brackets simply tells JSX that the content is JavaScript so leave it alone so it can eventually be parsed by a JavaScript engine (e.g., `2+2`). Note that `{ }` brackets can be used anywhere among the JSX expressions as long as the result is valid JavaScript.
+
+#### Notes
+
+* If you have to escape brackets (i.e. you want brackets in a string) use `{'{}'}`.
