--- a/react-jsx/5.5.md
+++ b/react-jsx/5.5.md
@@ -5,7 +5,7 @@ You can place JavaScript comments anywhere in React/JSX you want except location
 Examine the code below, make sure you understand where you'll have to tell JSX to pass along a JS comment so a child React node is not created.
 
 ```js
-var reactNode = <div /*comment*/>{/* use {} here to comment*/}</div>;
+var reactNode = <div /*comment*/>{/* use {'{}'} here to comment*/}</div>;
 ```
 
 In the above code if I had not wrapped the comment inside of the `<div>` with `{ }` brackets then Babel would have converted the comment to a React text node. The outcome, unintentionally, without the `{ }` would be:
@@ -15,7 +15,8 @@ var reactNode = React.createElement(
   "div",
   null,
   "/* use ",
-  " here to comment*/" 
+  "{}",
+  " here to comment*/"
 );
 ```
 
@@ -23,11 +24,8 @@ Which would result in the following HTML that would have unintended text nodes.
 
 ```html
 <div data-reactid=".0">
-    <span data-reactid=".0.0">/* use </span><span data-reactid=".0.1"> here to comment*/</span>
+	<span data-reactid=".0.0">/* use </span>
+	<span data-reactid=".0.1">{}</span>
+	<span data-reactid=".0.2"> here to comment*/</span>
 </div>
 ```
-
-
-
-
-
