--- a/react-jsx/5.8.md
+++ b/react-jsx/5.8.md
@@ -1,6 +1,6 @@
 # Defining Events in JSX
 
-In the last chapter, in section 4.7, it was explained and demonstrated how events are defined on React nodes. To do the same thing in JSX you add the same camelCased event and the corresponding handler/callback as a prop/attribute of the JSX representing the React node.
+In the previous chapter, in section 4.7, it was explained and demonstrated how events are defined on React nodes. To do the same thing in JSX you add the same camelCased event and the corresponding handler/callback as a prop/attribute of the JSX representing the React node.
 
 Below is the none JSX way of adding an event to a React node (example from Previous chapter, section 4.7):
 
@@ -10,7 +10,7 @@ The above code written using JSX:
 
 > [source code](https://jsfiddle.net/tvmqwuu1/#tabs=js,result,html,resources)
 
-Note that we are using the `{ }` brackets to connect a JS function to an event (i.e., `onMouseOver={mouseOverHandler}`). This style of adding events to nodes mimics the [DOM 0 style of inlining events on HTML elements](http://stackoverflow.com/questions/5642659/what-is-the-difference-between-dom-level-0-events-vs-dom-level-2-events).
+Note that we are using the `{ }` brackets to connect a JS function to an event (i.e., `onMouseOver={mouseOverHandler}`). This style of adding events to nodes mimics the [DOM 0 style of inlining events on HTML elements](http://stackoverflow.com/questions/5642659/what-is-the-difference-between-dom-level-0-events-vs-dom-level-2-events) (Don't worry, just mimics, does not really create inline events in the DOM).
 
 React supports the following events and event specific syntheticEvent properties:
 
