--- a/react-nodes/4.2.md
+++ b/react-nodes/4.2.md
@@ -34,10 +34,9 @@ ReactDOM.render(reactNodeLi, document.getElementById('app'));
 
 The above code, loosely stated, would invoke the following:
 
-1. find the element in an HTML page with an id of `app`
-2. create a virtual DOM constructed from the React element node passed in
-3. use the virtual DOM to re-construct a real DOM branch
-4. inserted real DOM branch (i.e., `<li id="li1">one</li>`) into the DOM as a child node of `<div id="app"></div>`.  
+1. create a virtual DOM constructed from the React element node passed in (i.e. `reactNodeLi`)
+2. use the virtual DOM to re-construct a real DOM branch
+3. inserted real DOM branch (i.e., `<li id="li1">one</li>`) into the DOM as a child node of `<div id="app"></div>`.  
 
 In other words, the HTML DOM would change from this:
 
@@ -98,7 +97,7 @@ It should be obvious that React nodes are just JavaScript objects in a tree that
 #### Notes
 
 * The `type` argument passed to `React.createElement(type,props,children)` can be a string indicating a standard HTML element (e.g., `'li'` = `<li></li>`), a custom element (e.g., `'foo-bar'` = `<foo-bar></foo-bar>`, or a React component instance (i.e., an instance of `React.createClass()`.
-* These are the standard HTML elements that React supports:
+* These are the standard HTML elements that React supports (i.e. these elements passed as a string `type` to `createElement()` will create the associating standard HTML element in the DOM):
 
 ```html
 a abbr address area article aside audio b base bdi bdo big blockquote body br
