--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -50,8 +50,6 @@ shiftKey
 
 The table below outlines the unique syntheticEvent properties for each type/category of events.
 
-React supports the following events:
-
 <table>
 <tr>
 <th>Event Type/Category:</th>
@@ -193,6 +191,6 @@ shiftKey,
 * React normalizes events so that they behave consistently across different browsers.
 * Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g., `onClick` would become `onClickCapture`).
 * If you need the browser event details you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callback.
-* React does not actually attach events to the to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
+* React doesn't actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
 * `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
 * Not all DOM events are provided by React. But you can still make use of them [using React lifecycle methods](https://facebook.github.io/react/tips/dom-event-listeners.html).
