--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -140,12 +140,12 @@ Once a component is mounted (i.e created) you can use the component API. The api
   </tr>
 </table>
 
-The most commonly used component API method used will is `setState()`. Its usage will be covered in the React Component State chapter.
+The most commonly used component API method is `setState()`. Its usage will be covered in the React Component State chapter.
 
 #### Notes
 
 * The component callback configuration options (`componentWillUnmount`, `componentDidUpdate`, `componentWillUpdate`, `shouldComponentUpdate`, `componentWillReceiveProps`, `componentDidMount`, `componentWillMount`) are also known as "lifecycle methods" because these various methods are executed at specific points in a component's life.
-* The `React.createClass()` function is a convenience function that creates component instances (via JavaScript `new` keyword) for you.
+* The `React.createClass()` function is a convenience function that creates component instances for you (via JavaScript `new` keyword).
 * The `render()` function should be a pure function. Which means:
 
 >it does not modify component state, it returns the same result each time it's invoked, and it does not read from or write to the DOM or otherwise interact with the browser (e.g., by using `setTimeout`). If you need to interact with the browser, perform your work in `componentDidMount()` or the other lifecycle methods instead. Keeping `render()` pure makes server rendering more practical and makes components easier to think about.
