--- a/basic-react-components/6.3.md
+++ b/basic-react-components/6.3.md
@@ -8,7 +8,7 @@ Note that if you want to return React nodes on more than one line (taking advant
 
 > [source code](https://jsfiddle.net/e2awasnk/#tabs=js,result,html,resources)
 
-An error will occur if more than one starting React node is attempted to be return. If you think about it, the error occurs because returning two `React.createElement()` functions isn't possible with JavaScript.
+An error will occur if more than one starting React node is attempted to be returned. If you think about it, the error occurs because returning two `React.createElement()` functions isn't possible with JavaScript.
 
 > [source code](https://jsfiddle.net/xe5kkpub/#tabs=js,result,html,resources)
 
