--- a/basic-react-components/6.4.md
+++ b/basic-react-components/6.4.md
@@ -12,4 +12,4 @@ The other way to gain a reference to a component instance involves making use of
 
 #### Notes
 
-* The `this` keyword will commonly be used from within a component to access instance properties like `this.props.[NAME OF PROP]`, `this.props.children`, and `this.state`,. It will also be used to call class methods/properties, that all components share like `this.setState`, `this.replaceState()`.
+* The `this` keyword will commonly be used from within a component to access instance properties like `this.props.[NAME OF PROP]`, `this.props.children`, and `this.state`,. It will also be used to call class methods/properties, that all components share like `this.setState` and `this.replaceState()`.
