updates code examples

--- a/react-props/7.3.md
+++ b/react-props/7.3.md
@@ -2,7 +2,7 @@
 
 As discussed in section 6.4 a component instance can be accessed from any configuration option that uses a function by way of the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration option (i.e., `this.props.name`).
 
-```
+```javascript
 var Badge = React.createClass({
 	render: function() {
 		return <div>{this.props.name}</div>;
@@ -14,7 +14,7 @@ ReactDOM.render(<Badge name="Bill" />, document.getElementById('app'));
 
 Nothing that difficult to grasp is happening if you look at the transformed JavaScript (i.e., JSX to JS)
 
-```
+```javascript
 var Badge = React.createClass({
 	displayName: "Badge",
 
