--- a/react-props/7.6.md
+++ b/react-props/7.6.md
@@ -1,8 +1,8 @@
 # Validating Component Props
 
-The enforcement of the proper usage of a prop within a component props can be validated when component instances are created.
+The enforcement of a prop can be validated when component instances are created.
 
-When defining a component, the `propTypes` configuration option can be used to identify if and how props should be validated. In the code example below I'm checking to see that `propArray` and `propObject` are in fact the correct data types and are sent into the component when it is instantiated.
+When defining a component, the `propTypes` configuration option can be used to identify if and how props should be validated. In the code example below I'm checking to see that `propArray` and `propFunc` are in fact the correct data types and are sent into the component when it is instantiated.
 
 > [source code](https://jsfiddle.net/jxbdodh8/#tabs=js,result,html,resources)
 
@@ -16,7 +16,13 @@ Warning: Failed propType: Required prop `propFunc` was not specified in `MyCompo
 Uncaught TypeError: this.props.propFunc is not a function
 ```
 
-React offers several built in validators (e.g.` React.PropTypes[VALIDATOR]`) which I outline below and the ability to create custom prop validators.
+Note however, the commented below will not cause an error:
+
+```javascript
+ReactDOM.render(<MyComponent propArray={[1,2]} propFunc={function(){return 3;}} />, document.getElementById('app'));
+```
+
+React offers several built in validators (e.g.` React.PropTypes[VALIDATOR]`) which I outline below (Note that creating custom validators are possible as well.):
 
 ####Basic type validators:
 
