--- a/react-state/8.1.md
+++ b/react-state/8.1.md
@@ -1,6 +1,6 @@
 # What Is Component State?
 
-Most components should simply take in props and render. But, components also offer state, and it is used to store information about the component that can change over time. Typically the change comes as a result of user events or system events (i.e., as a response to user input, a server request or the passage of time).
+Most components should simply take in props and render. But, components also offer state, and it is used to store information about the component that can change over time. Typically the change comes as a result of user events or system events (i.e., as a response to user input, a server request, or the passage of time).
 
 According to the React documentation state should:
 
