--- a/react-state/8.2.md
+++ b/react-state/8.2.md
@@ -8,4 +8,4 @@ In the code example below I am creating a `<MoodComponent />` that demonstrates 
 
 Note that the `<MoodComponent />` has an initial state of ':|', that is set using  `getInitialState: function() {return {mood: ':|'};}`, which is used in the component when it is first rendered by writing, `{this.state.mood}`.
 
-To change the state, an event listener is added; in this case a click event (i.e., `onChange`) on the `<span>` node that will call the `changeMood` function. Within this function I use `this.setState()` to cycle to the next mood based on the current mood/state. After the state is update (i.e., `setState()` merges the changes) the component will re-render itself and the UI will change.
+To change the state, an event listener is added; in this case a click event (i.e., `onClick`) on the `<span>` node that will call the `changeMood` function. Within this function I use `this.setState()` to cycle to the next mood based on the current mood/state. After the state is update (i.e., `setState()` merges the changes) the component will re-render itself and the UI will change.
