Correcting typo in defining props in JSX

--- a/react-jsx/5.7.md
+++ b/react-jsx/5.7.md
@@ -52,7 +52,7 @@ When the `reactNodeLi` node is render to the DOM it will look like this:
 You should note the following:
 
 1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g., `id=""` becomes `id="true"` and `test` becomes `test="true"`)
-2. The `foo` attribute, because it was not a standard HTML attribute does become a final HTML attribute.
+2. The `foo` attribute, because it was not a standard HTML attribute, doesn't become a final HTML attribute.
 
 #### Notes
 
