Applied formatting to abbreviation
What’s in this commit:

- Only formatting changes, not content changes
- Correct formatting of Latin abbreviations, and changed instance of
i.e. to more correctly use e.g.

--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -86,7 +86,7 @@ It looks like a lot of code. However, the bulk of the code simply involves creat
 
 Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just meditate on the configuration options available when defining a React component and how a reference to the component is achieved using the `this` keyword. Also note, that in the code example above I added my own custom instance method (i.e., `tick`) during the creation of the `<Timer/>` component.
 
-Once a component is mounted (i.e created) you can use the component API. The api contains four methods.
+Once a component is mounted (i.e., created) you can use the component API. The api contains four methods.
 
 <table>
 	<tr>
