--- a/react-basic-setup/3.2.md
+++ b/react-basic-setup/3.2.md
@@ -48,7 +48,7 @@ More will be said about JSX in the JSX chapter. For now, just realize that JSX i
 
 Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool (e.g., via something like [webpack](https://webpack.github.io/)). However, it is possible to use Babel directly in the browser by way of a script include. And since we are just getting started we'll avoid CLI tools or learning a module loader in order to learn React.
 
-The Babel project unfortunately, as of Babel 6, no longer provides the script file needed (i.e., `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e., 5.8.23) that provides the needed file (i.e `browser.js`) for transforming JSX/ES* in the browser.
+The Babel project unfortunately, as of Babel 6, no longer provides the script file needed (i.e., `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e., 5.8.23) that provides the needed file (i.e., `browser.js`) for transforming JSX/ES* in the browser.
 
 ### Using `browser.js` (Babel 5.8.23) to Transform JSX in the Browser
 
