--- a/react-jsx/5.4.md
+++ b/react-jsx/5.4.md
@@ -35,4 +35,4 @@ Nothing that complicated is going on here once you realize that the brackets bas
 
 #### Notes
 
-* If you have to escape brackets (i.e. you want brackets in a string) use `{'{}'}`.
+* If you have to escape brackets (i.e., you want brackets in a string) use `{'{}'}`.
