--- a/react-nodes/4.2.md
+++ b/react-nodes/4.2.md
@@ -34,7 +34,7 @@ ReactDOM.render(reactNodeLi, document.getElementById('app'));
 
 The above code, loosely stated, would invoke the following:
 
-1. create a virtual DOM constructed from the React element node passed in (i.e. `reactNodeLi`)
+1. create a virtual DOM constructed from the React element node passed in (i.e., `reactNodeLi`)
 2. use the virtual DOM to re-construct a real DOM branch
 3. inserted real DOM branch (i.e., `<li id="li1">one</li>`) into the DOM as a child node of `<div id="app"></div>`.  
 
