--- a/react-nodes/4.4.md
+++ b/react-nodes/4.4.md
@@ -18,12 +18,12 @@ var reactNodeLi = React.createElement('li',
     foo:'bar',
     id:'li1',
     //note use of JS class property representing class attribute below
-    //i.e., className
+    //e.g., className
     className:'blue',
     'data-test':'test',
     'aria-test':'test',
     //note use of JS camel-cased CSS property below
-    //i.e., backgroundColor
+    //e.g., backgroundColor
     style:{backgroundColor:'red'}
 },
 'text'
