--- a/react-state/8.1.md
+++ b/react-state/8.1.md
@@ -9,7 +9,7 @@ According to the React documentation state should:
 Things to keep in mind about React component state:
 
 1. If a component has a state, a default state should be providing using `getInitialState()`
-2. State changes are typically how you start the re-rendering of a component and all sub components (i.e., children, grandchildren, great grand chidlren etc...).
+2. State changes are typically how you start the re-rendering of a component and all sub components (i.e., children, grandchildren, great grand chidlren, etc.).
 3. You inform a component of a state change by using `this.setState()` to set a new state.
 4. A state change merges new data with old data that is already contained in the state (i.e., `this.state`)
 4. A state change internally deals with calling re-renders. You should never have to call `this.render()` directly.
