--- a/react-props/7.6.md
+++ b/react-props/7.6.md
@@ -22,7 +22,7 @@ Note however, the commented below will not cause an error:
 ReactDOM.render(<MyComponent propArray={[1,2]} propFunc={function(){return 3;}} />, document.getElementById('app'));
 ```
 
-React offers several built in validators (e.g.` React.PropTypes[VALIDATOR]`) which I outline below (Note that creating custom validators are possible as well.):
+React offers several built in validators (e.g., ` React.PropTypes[VALIDATOR]`) which I outline below (Note that creating custom validators are possible as well.):
 
 ####Basic type validators:
 
