Minor typos and small language changes
Reformatted one section of code in 3.3.md to better highlight what the
code looked like before translation.

--- a/react-basic-setup/3.2.md
+++ b/react-basic-setup/3.2.md
@@ -1,6 +1,6 @@
 # Using JSX via Babel
 
-The creation of the React `HelloMessage` component and React `<div>` element node in the HTML page below was done using the `React.createClass()` and `React.createElement()` functions. This code should look familiar as it is identical to the HTML from the previous section. This HTML will run without errors in ES5 browsers.
+The creation of the React `HelloMessage` component and React `<div>` element node in the HTML page below was done using the `React.createClass()` and `React.createElement()` functions. This code should look familiar as it is identical to the HTML from the previous section. This HTML will run without errors in [ES5 browsers](https://kangax.github.io/compat-table/es5/).
 
 ```html
 <!DOCTYPE html>
@@ -24,7 +24,7 @@ The creation of the React `HelloMessage` component and React `<div>` element nod
 </html>
 ```
 
-Optionally, by using JSX via Babel, it is possible to simplify the creation of React elements by abstracting the `React.createElement()` JavaScript function calls so that it can be written in a more natural HTML like style and syntax.
+Optionally, by using JSX via Babel, it is possible to simplify the creation of React elements by abstracting the `React.createElement()` JavaScript function calls so they can be written in a more natural HTML-like style and syntax.
 
 Instead of writing the following, which uses `React.createElement()`:
 
@@ -40,13 +40,13 @@ return <div>Hello {this.props.name}</div>;
 
 And then Babel will convert it back to the code which uses `React.createElement()` so it can be parsed by a JavaScript engine.
 
-Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run. In other words, Babel will translate JSX to `React.createElement` function calls.
+Loosely stated you can consider JSX a form of HTML that you can directly write in JavaScript that requires a transformation step, done by Babel, into ECMAScript 5 code that browsers can run.
 
 More will be said about JSX in the JSX chapter. For now, just realize that JSX is an optional abstraction provided for your convenience when creating React elements and it won't run in ES5 browsers without first being transformed by Babel.
 
 ## Transforming JSX via Babel in the Browser
 
-Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool (e.g., via something like [webpack](https://webpack.github.io/)). However, it is possible to use Babel directly in the browser by way of a script include. And since we are just getting started we'll avoid CLI tools or learning a module loader in order to learn React.
+Normally, Babel is setup to automatically process your JavaScript files during development using the Babel CLI tool (e.g., via something like [webpack](https://webpack.github.io/)). However, it is possible to use Babel directly in the browser by way of a script include. As we are just getting started we'll avoid CLI tools or learning a module loader to focus on learning React. Note that you should never use this browser transformation in a production environment.
 
 The Babel project unfortunately, as of Babel 6, no longer provides the script file needed (i.e., `browser.js`) to transform JSX code to ES5 code in the browser. Thus you will have to use an older version of Babel (i.e., 5.8.23) that provides the needed file (i.e., `browser.js`) for transforming JSX/ES* in the browser.
 
@@ -77,7 +77,7 @@ In the HTML file below the React code we have been working with to create the `H
 </html>
 ```
 
-Having JSX transformed in the browser, while convenient and easy to setup, isn't ideal because the transformation cost is occurring at runtime. Thus, using browser.js is ***not a production solution***.
+While transforming JSX in the browser is convenient and easy to setup, it isn't ideal because the transformation cost is occurring at runtime. This will slow down your web pages and may cause memory issues. Therefore using browser.js is ***not a production solution***.
 
 You should be aware that the code examples used in this book via JSFiddle will be using the `browser.js` (Babel 5.8.23) to transform JSX into ES5 code. In other words, JSFiddle is pretty much doing what you see in the HTML file above when running React code.
 
@@ -90,4 +90,4 @@ You should be aware that the code examples used in this book via JSFiddle will b
     * The compiler will find errors in your HTML you might otherwise miss.
     * JSX promotes the idea of inline styles. Which can be a good thing.
 * Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
-* A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
+* A [JSX specification is currently being drafted](https://facebook.github.io/jsx/). It can be used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
