--- a/react-basic-setup/3.3.md
+++ b/react-basic-setup/3.3.md
@@ -2,9 +2,9 @@
 
 Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES\* code and transforms it to run in browsers that don't support ES\* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When doing these ECMAScript transformations it is trivial to also transform JSX expressions into `React.createElement()` calls. This is what we examined in the previous section.
 
-Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write futuristic ES\* code.
+Given that Babel is the mechanism for transforming JSX, it allows you to write code that will run in future versions of ES\*.
 
-In the HTML page below the familiar `HelloMessage` component has been re-written to [take advantage](http://babeljs.io/blog/2015/06/07/react-on-es6-plus/) of [ES6 classes](https://github.com/lukehoban/es6features#classes). So, not only is Babel transforming the JSX syntax, it is also transforming ES6 class syntax to ES5 syntax. Which can then be parsed by ES5 browser engines.
+In the HTML page below the familiar `HelloMessage` component has been rewritten to [take advantage](http://babeljs.io/blog/2015/06/07/react-on-es6-plus/) of [ES6 classes](https://github.com/lukehoban/es6features#classes). Not only is Babel transforming the JSX syntax, it is also transforming ES6 class syntax to ES5 syntax which can then be parsed by ES5 browser engines.
 
 ```html
 <!DOCTYPE html>
@@ -27,13 +27,14 @@ In the HTML page below the familiar `HelloMessage` component has been re-written
         ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
 
         /*** PREVIOUSLY ***/
-        /*var HelloMessage = React.createClass({
-            render: function() {
-                return <div>Hello {this.props.name}</div>;
-            }
-        });
-
-        ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));*/
+        /* var HelloMessage = React.createClass({
+         *    render: function() {
+         *        return <div>Hello {this.props.name}</div>;
+         *    }
+         * });
+         *
+         * ReactDOM.render(<HelloMessage name="John" />, document.getElementById('app'));
+         */
     </script>
 </body>
 </html>
@@ -93,7 +94,7 @@ var HelloMessage = (function (_React$Component) {
 ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
 ```
 
-Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel 5.8.23 (i.e., [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
+Most [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel 5.8.23 (i.e., [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
 
 #### Notes
 
