fixes to code and sentence in 8.4

--- a/react-state/8.4.md
+++ b/react-state/8.4.md
@@ -6,7 +6,7 @@ When a component is purely a result of `props` alone, no `state`, the component 
 
 Having look at the same code not using JSX should clarify what is going on.
 
-```
+```js
 var MyComponent = function MyComponent(props) {
 	return React.createElement(
 		"div",
@@ -29,4 +29,4 @@ The code example below demonstrates a stateless function component making use of
 
 #### Notes
 
-* Make as many of your components as possible, as stateless components
+* Make as many of your components as possible, as stateless components.
