Fixing the updating phase in the react component lifecycle

--- a/basic-react-components/6.7.md
+++ b/basic-react-components/6.7.md
@@ -91,9 +91,10 @@ Below I show a table for each category and the containing lifecycle methods.
 <ol>
 <li><code>componentWillReceiveProps()</code></li>
 <li><code>shouldComponentUpdate()</code></li>
+<li><code>componentWillUpdate()</code></li>
 <li><code>render()</code></li>
 <li>Children Life cycle methods</li>
-<li><code>componentWillUpdate()</code></li>
+<li><code>componentDidUpdate()</code></li>
 </ol>
 * Unmount Phase follows this order:
 <ol>
